code/compiler/test/analysis/diagnostics_input_tests/unknown_reference_access.c.diag
Error: [Basic] Write access to unknown location
                from: "main"
<input_filepath>@5:5-5:10
    *p = 21;
    ^~~~~~
