code/compiler/test/analysis/diagnostics_input_tests/unknown_reference_access.c
int* foo(void);

int main(void) {
    int* p = foo();
    *p = 21;
}
